[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pyconv"
version = "4.12.0"
description = "Plex Convert GUI — multi-GPU AV1/HEVC encoder with Copyparty support"
requires-python = ">=3.10"
dependencies = [
    "requests",
]

[project.scripts]
pyconv = "pyconv.__main__:main"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort
    "B",   # flake8-bugbear (likely bugs)
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (mamy 120 w ustawieniu)
    "B008",  # function calls in default args
    "SIM108",# ternary operator — czasem czytelniej bez
]

[tool.ruff.lint.per-file-ignores]
"app.py" = ["F401", "E402"]  # bootstrap shim — celowe late imports
"__main__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true
follow_imports = "silent"
show_error_codes = true
exclude = [
    "app\\.py",
]
