[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pyconv"
version = "4.12.0"
description = "Plex Convert GUI — multi-GPU AV1/HEVC encoder with Copyparty support"
requires-python = ">=3.10"
dependencies = [
    "requests",
]

[project.scripts]
pyconv = "pyconv.__main__:main"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names)
    "I",    # isort
    "B",    # flake8-bugbear
]
ignore = [
    # styl / formatowanie — naprawi ruff format
    "E501",   # line too long
    "E701",   # multiple statements on one line
    "I001",   # import block unsorted — naprawia ruff format
    # UP* — modernizacja składni (opcjonalne)
    "UP006",  # List → list
    "UP007",  # Union → X|Y
    "UP035",  # deprecated typing imports
    "UP037",  # quoted annotations
    "UP045",  # Optional → X|None
    # SIM — czytelność (opcjonalne)
    "SIM102", # nested if
    "SIM105", # contextlib.suppress
    "SIM108", # ternary
    # B — false positives w tym kodzie
    "B008",   # function calls in defaults
    "B905",   # zip strict=
]

[tool.ruff.lint.per-file-ignores]
"app.py" = ["F401", "E402"]
"__main__.py" = ["F401"]
"gui/callbacks.py" = ["F401"]  # dual-import try/except blok

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true
follow_imports = "silent"
show_error_codes = true
exclude = [
    "app\\.py",
]
